# css

./: .gitignore  README.md  cybernet-scoring-system.py  main.py  pyproject.toml
config/: settings.py
doc/: main_screen_mockup.excalidraw
models/: scores.py
services/: score_store.py  stats_retriever.py
style/: css.tcss
widgets/: service_row.py  top_row.py
